Fix the related links block spacing issues.

--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ label {
 /* Related Links region contextual links */
 #wdn_footer_related a.contextual-links-trigger {display: none;}
 #wdn_footer_related .contextual-links-region:hover a.contextual-links-trigger {display: block;}
+
+#leftcollinks .block {
+    margin-bottom: 0;
+}
 /* Fix for a Views page */
 #pagetitle {position: relative;}
 #wdn_content_wrapper.contextual-links-region {position: static;}
